// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Progress Component > renders with default value when no value is provided 1`] = `
<body>
  <div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20 border border-primary/40"
      data-max="100"
      data-state="indeterminate"
      data-testid="testeprogress"
      role="progressbar"
    >
      <div
        class="h-full w-full flex-1 bg-primary transition-all"
        data-max="100"
        data-state="indeterminate"
        style="transform: translateX(-100%);"
      />
    </div>
  </div>
</body>
`;

exports[`Progress Component > renders with value when value is provided 1`] = `
<body>
  <div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20 border border-primary/40"
      data-max="100"
      data-state="indeterminate"
      data-testid="testeprogress"
      role="progressbar"
    >
      <div
        class="h-full w-full flex-1 bg-primary transition-all"
        data-max="100"
        data-state="indeterminate"
        style="transform: translateX(-50%);"
      />
    </div>
  </div>
</body>
`;
